--- a/eva.html
+++ b/eva.html
@@ -300,14 +300,14 @@ Bone scan index as metastatic bone disease quantifier and predictor of radium-22
 							</ul>
 
 							<ul class="blog-meta">
-								<!--<abstract style="display:inline" ;>
+								<<abstract style="display:inline" ;>
 									<details open style="display:inline;">
 										<summary>
 											<span style="color:#6195FF">Hide/Show Full Abstract</span>
 										</summary>
-										ABSTRACT
+										Head immobilization thermoplastic masks for radiotherapy purposes involve a distressful modelling proce- dure for the patient. To assess the possibility of using different acquisition and reconstruction methods to obtain a 3Dskin surface model of PIXY-phantom-head and to present a proposal of an alternative head immobilisation mask prototype. Phantom head geometry acquisitions using: computed tomography (recon- structed with ImageJ and Osirix); and 3DLaserScanner (reconstructed with SolidWorks). From these recon- structed surface models a set of landmarks was measured and subsequently compared with physical measurements obtained with a Rosscraft-Calliper. For statistical evaluation, relative deviations graphics and Friedman-test for non-parametrical paired samples were used, with a significance level of 5%. For a first assessment of the proposed mask performance, a radiotransparent material was considered, the strength and stiffness evaluation being performed using the finite element method. There are small differences between all the acquisitions and reconstructions methods and the physical measurements, statistically significant differ- ences (X2F(6)) = 6.863, p=0.334) were not found. The proposed mask performed well from the strength and stiffness perspectives, leading to the desired immobilisation aim. The immobilisation mask design proposal may be an effective alternative to the present completely hand-made situation, which presents a high-degree of discomfort and stress to the patients.
 										</details>
-								</abstract>-->
+								</abstract>
 							</ul>
 							<ul class="blog-meta">
 								<li>2019. Nuclear Medicine Communications.</li>
@@ -387,14 +387,14 @@ Bone scan index as metastatic bone disease quantifier and predictor of radium-22
 							</ul>
 
 							<ul class="blog-meta">
-								<!--<abstract style="display:inline" ;>
+								<abstract style="display:inline" ;>
 									<details open style="display:inline;">
 										<summary>
 											<span style="color:#6195FF">Hide/Show Full Abstract</span>
 										</summary>
-										ABSTRACT
+										Head immobilization thermoplastic masks for radiotherapy purposes involve a distressful modelling proce- dure for the patient. To assess the possibility of using different acquisition and reconstruction methods to obtain a 3Dskin surface model of PIXY-phantom-head and to present a proposal of an alternative head immobilisation mask prototype. Phantom head geometry acquisitions using: computed tomography (recon- structed with ImageJ and Osirix); and 3DLaserScanner (reconstructed with SolidWorks). From these recon- structed surface models a set of landmarks was measured and subsequently compared with physical measurements obtained with a Rosscraft-Calliper. For statistical evaluation, relative deviations graphics and Friedman-test for non-parametrical paired samples were used, with a significance level of 5%. For a first assessment of the proposed mask performance, a radiotransparent material was considered, the strength and stiffness evaluation being performed using the finite element method. There are small differences between all the acquisitions and reconstructions methods and the physical measurements, statistically significant differ- ences (X2F(6)) = 6.863, p=0.334) were not found. The proposed mask performed well from the strength and stiffness perspectives, leading to the desired immobilisation aim. The immobilisation mask design proposal may be an effective alternative to the present completely hand-made situation, which presents a high-degree of discomfort and stress to the patients.
 										</details>
-								</abstract>-->
+								</abstract>
 							</ul>
 							<ul class="blog-meta">
 								<li>2019. Computer Methods in Biomechanics and Biomedical Engineering: Imaging & Visualization. DOI: 10.1080/21681163.2018.1507840.</li>
