--- a/eva.html
+++ b/eva.html
@@ -300,7 +300,7 @@ Bone scan index as metastatic bone disease quantifier and predictor of radium-22
 							</ul>
 
 							<ul class="blog-meta">
-								<<abstract style="display:inline" ;>
+								<abstract style="display:inline" ;>
 									<details open style="display:inline;">
 										<summary>
 											<span style="color:#6195FF">Hide/Show Full Abstract</span>
