--- a/alex.html
+++ b/alex.html
@@ -293,7 +293,7 @@ I later returned to the University of York as a research associate in the Intell
 								</li>																
 
 							</ul>
-						<!--<a href="https://www.sciencedirect.com/science/article/pii/S0303264718301850"><i class="fa fa-external-link"></i></a>Link to article</li>-->
+						<a href="publications/lacey-cec2019.pdf"><i class="fa fa-cloud-download"></i></a>PDF</li>									
 							<ul class="blog-meta">
 								<abstract style="display:inline" ;>
 									<details open style="display:inline;">
