--- a/evolutionary_algorithms.html
+++ b/evolutionary_algorithms.html
@@ -302,7 +302,7 @@
 					<div class="blog">
 
 		<div class="blog-content">
-							<h3>The Recognition of Sub-Networks within Artiﬁcial Gene Regulatory Networks.</h3>
+							<h3>Modularity Within Artificial Gene Regulatory Networks</h3>
 							<ul class="blog-meta">
 							<li>
 									<i class="fa fa-user"></i>
@@ -328,7 +328,19 @@
 										<summary>
 											<span style="color:#6195FF">Hide/Show Full Abstract</span>
 										</summary>
-										Hierarchy and modularity are found in complex systems across nature, allowing simple fundamental processes to work together to exhibit higher order emergent behaviour. It is predicted that artiﬁcial gene regulatory networks (AGRNs) self-divide into sub-networks of functionality, consisting of multiple interacting nodes when solving complex tasks. The recognition of these sub-networks is expected to be beneﬁcial for preserving useful functionality during training, and improving transparency of execution so that network actions can be explained, and improvements made based on imperfections. In this paper, the self-organisation of AGRNs based on the functionality of the network has been investigated at a fundamental level, by training networks to solve multiple independent tasks with the intention of replicating complex tasks.
+										Modularity is a feature of found in biological systems where it is common for functionally related processes to
+evolve to be individually discrete units. Such traits are prevelant
+in prokaryotic genomes. This work aims to understand to
+what extent artificial gene regulatory networks AGRNs, which
+take inspiration from gene regulation in nature will self-divide
+into modular task specific sub-networks consisting of multiple
+interacting nodes when solving multiple complex tasks. To
+investigate this, we evolve AGRNs to solve three different tasks
+with ranging dynamics simultaneously and evaluate the network
+structure. From this we aim to build an understanding of whether
+modularity in AGRNs is fundamental to solving multiple tasks
+and what effect the nature of the tasks being solved has on
+modularity within the networks.
 										</details>
 								</abstract>
 							</ul>
