--- a/eva.html
+++ b/eva.html
@@ -297,6 +297,7 @@ Bone scan index as metastatic bone disease quantifier and predictor of radium-22
 								<li><li><i class="fa fa-user"></i>Carolino, E.</li></li>
 								<li>
 									<a href="publications/bone scan.pdf"><i class="fa fa-cloud-download"></i></a>PDF</li>
+						<a href="https://insights.ovid.com/pubmed?pmid=30908340"><i class="fa fa-external-link"></i></a>Link to article</li>									
 							</ul>
 
 							<ul class="blog-meta">
