--- a/nina.html
+++ b/nina.html
@@ -274,6 +274,47 @@
 					<div class="blog">
 
 		<div class="blog-content">
+							<h3>Cross-dialectal speech processing</h3>
+							<ul class="blog-meta">
+							<li>
+									<i class="fa fa-user"></i>Whettam, D.</li>
+								</li>							
+								<li>
+									<i class="fa fa-user"></i>Gargett, A.</li>
+								</li>
+								<li>
+									<i class="fa fa-user"></i>
+									<a href="nina.html">Dethlefs, N.</a>
+								</li>								
+<!--						<a href="publications/lacey-cec2019.pdf"><i class="fa fa-cloud-download"></i></a>PDF</li>									-->
+							</ul>
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+										
+Despite advances in technology, language diversity remains a challenge to the speech processing community, but there is also an opportunity to rise to this challenge through research and innovation. Pluricentric languages play an important role in such work, particularly where these languages are better resourced. Dedicated researchers across several decades, have steadily contributed resources for some language varieties, increasing general availability of a range of data archives...
+										</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2019. INTERSPEECH Satellite Workshop on Pluricentric Languages in Speech Technology, Graz, Austria.</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+								<a href="evolutionary_algorithms.html#publications">
+									<i class="fa fa-tag"></i>Natural Language Processing</a>
+							</div>
+						</div>
+						<!-- blog tags -->
+
+						<!-- publication entry -->
+
+
+		<div class="blog-content">
 							<h3>Modularity Within Artificial Gene Regulatory Networks</h3>
 							<ul class="blog-meta">
 							<li>
