--- a/annika.html
+++ b/annika.html
@@ -113,7 +113,7 @@
 								<li><a href="mailto:a.m.schoene@2017.hull.ac.uk"><i class="fa fa-envelope"></i></a></li>																								
 								<li><a href="https://scholar.google.co.uk/citations?user=rjyW-LUAAAAJ&hl=en"><i class="fa fa-google"></i></a></li>																
 								<li><a href="https://www.linkedin.com/in/annika-schoene-740300114"><i class="fa fa-linkedin-square" ></i></a></li>	
-								<li><a href="https://github.com/annikaschoene"><i class="fa fa-git"></i></a></li>																																																																													
+								<li><a href="https://annikamarie.github.io/"><i class="fa fa-git"></i></a></li>																																																																													
 							</ul>
 						</div>
 						<div class="blog-content">
