--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ we research interactive systems for dementia.</p>
 									<a href="mailto:a.m.schoene@2017.hull.ac.uk"><i class="fa fa-envelope"></i></a>																			
 									<a href="https://scholar.google.co.uk/citations?user=rjyW-LUAAAAJ&hl=en"><i class="fa fa-google"></i></a>
 									<a href="https://www.linkedin.com/in/annika-schoene-740300114"><i class="fa fa-linkedin-square" ></i></a>
-									<a href="https://github.com/annikaschoene"><i class="fa fa-git"></i></a>
+									<a href="https://annikamarie.github.io/"><i class="fa fa-git"></i></a>
 									<a href="annika.html"><i class="fa fa-user"></i></a>									
 								</div>
 							</div>
