--- a/nina.html
+++ b/nina.html
@@ -272,6 +272,277 @@
 
 			<main class="section ">
 					<div class="blog">
+					
+						<!-- publication entry -->
+
+						<div class="blog-content">
+							<h3>Transparent Deep Learning and Transductive Transfer Learning: A New Dimension for Wind Energy Research.</h3>
+							<ul class="blog-meta">
+								<li>
+									<i class="fa fa-user"></i>
+									<a href="joyjit.html">Chatterjee, J.</a>
+								</li>							
+							<li>
+									<i class="fa fa-user"></i>
+									<a href="nina.html">Dethlefs, N.</a>
+								</li>									
+								<li>
+								<!--<a href="https://www.climatechange.ai/CameraReadySubmissions%202-119/22/CameraReadySubmission/neurips_2019.pdf"><i class="fa fa-cloud-download"></i></a>PDF</li>	 -->
+							</ul>
+
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+										Wind turbines suffer from operational inconsistencies due to a variety of factors, ranging from environmental changes, to intrinsic anomalies in specific components, such as gearbox, generator, pitch system etc.  Condition monitoring of wind turbines has been a critical research area in the last decade, wherein the Supervisory Control & Data Acquisition (SCADA) data is used to analyse the operational behaviour of the turbine and predict any incipient faults to prevent catastrophic losses caused by unexpected failures. Machine learning models have formed a large part of the data-analytics based methods used for learning from historical failures through supervised learning, but they suffer from the lack of ability to provide additional capabilities for learning with little labelled data, or for that matter, no labelled faults in a different domain. Deep learning has shown immense success in areas where time-series data is to be modelled. In this paper, we propose a hybrid deep learning model combining a Long short-term memory network (LSTM) with XGBoost, a decision tree-based classifier for providing the benefits of accuracy through deep learning, and transparency through traditional decision trees. Our study shows that Transfer learning allows us to make predictions with increasing accuracy on unseen data; which is useful for simulations of new operations, new wind farms or other cases of non-available training data. This can help reduce downtime of turbines through predictive maintenance, by predicting incipient faults, or provide corrective maintenance, by assisting the engineers and technicians to analyse the root causes behind the failure, thus contributing to the reliability and uptake of wind energy as a sustainable and promising domain. 
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2019. In WindEurope Offshore, Copenhagen, Denmark.</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+								<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+								<a href="natural.html#publications">
+									<i class="fa fa-tag"></i>Data and Natural World</a>									
+							</div>
+						</div>
+						<!-- blog tags -->
+
+						<!-- publication entry -->					
+
+						<!-- publication entry -->
+
+						<div class="blog-content">
+							<h3>Bidirectional Dilated LSTM with Attention for Fine-grained Emotion Classification in Tweets.</h3>
+							<ul class="blog-meta">
+								<li>
+									<i class="fa fa-user"></i>
+									<a href="annika.html">Schoene, A.</a>
+								</li>							
+								<li>
+									<i class="fa fa-user"></i>
+									<a href="alex.html">Turner, A.</a>
+								</li>									
+								<li>
+									<i class="fa fa-user"></i>
+									<a href="nina.html">Dethlefs, N.</a>
+								</li>
+								<li>
+								<!--	<a href="https://aiforsocialgood.github.io/neurips2019/accepted/track1/pdfs/45_aisg_neurips2019.pdf"><i class="fa fa-cloud-download"></i></a>PDF</li>	 -->
+							</ul>
+
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+										We propose a novel approach for fine-grained emotion classification in tweets using a Bidirectional Dilated LSTM (BiDLSTM) with attention. Conventional LSTM architectures can face problems when classifying long sequences, which is problematic for tweets, where
+crucial information is often attached to the end of a sequence, e.g. an emoticon. We show that by adding a bidirectional layer, dilations and attention mechanism to a standard LSTM, our model overcomes these problems and is able to maintain complex data
+dependencies over time. We present experiments with two datasets,
+the 2018 WASSA Implicit Emotions Shared Task and a new dataset
+of 240,000 tweets. Our BiDLSTM with attention achieves a test
+accuracy of up to 81.97% outperforming competitive baselines by
+up to 10.52% on both datasets. Finally, we evaluate our data against
+a human benchmark on the same task.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>To appear. In Proceedings of AAAI-2020 Workshop on Affective Content Analysis. New York, USA.</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+								<a href="nlp.html#publications">
+									<i class="fa fa-tag"></i>Natural Language Processing</a>
+								<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+							</div>
+						</div>
+						<!-- blog tags -->
+
+						<!-- publication entry -->
+
+						<div class="blog-content">
+							<h3>Natural Language Generation for Operations and Maintenance in Wind Turbines.</h3>
+							<ul class="blog-meta">
+								<li>
+									<i class="fa fa-user"></i>
+									<a href="joyjit.html">Chatterjee, J.</a>
+								</li>							
+							<li>
+									<i class="fa fa-user"></i>
+									<a href="nina.html">Dethlefs, N.</a>
+								</li>									
+								<li>
+								<a href="https://www.climatechange.ai/CameraReadySubmissions%202-119/22/CameraReadySubmission/neurips_2019.pdf"><i class="fa fa-cloud-download"></i></a>PDF</li>	 
+							</ul>
+
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+										Wind energy is one of the fastest-growing sustainable energy sources in the world
+but relies crucially on efficient and effective operations and maintenance to generate
+sufficient amounts of energy and reduce downtime of wind turbines and associated
+costs. Machine learning has been applied to fault prediction in wind turbines,
+but these predictions have not been supported with suggestions on how to avert
+and fix faults. We present a data-to-text generation system using transformers to
+produce event descriptions from SCADA data capturing the operational status of
+turbines and proposing maintenance strategies. Experiments show that our model
+learns feature representations that correspond to expert judgements. In making a
+contribution to the reliability of wind energy, we hope to encourage organisations
+to switch to sustainable energy sources and help combat climate change.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2019. In NeurIPS 2019 Workshop on Tackling Climate Change with Machine Learning. Vancouver, Canada.</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+								<a href="nlp.html#publications">
+									<i class="fa fa-tag"></i>Natural Language Processing</a>
+								<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+								<a href="natural.html#publications">
+									<i class="fa fa-tag"></i>Data and Natural World</a>									
+							</div>
+						</div>
+						<!-- blog tags -->
+
+						<!-- publication entry -->
+
+						<!-- publication entry -->
+
+						<div class="blog-content">
+							<h3>Dilated LSTM with ranked units for classification of suicide notes.</h3>
+							<ul class="blog-meta">
+								<li>
+									<i class="fa fa-user"></i>
+									<a href="annika.html">Schoene, A.</a>
+								</li>			
+					<li>
+									<i class="fa fa-user"></i>
+									<a href="alex.html">Turner, A.</a>
+								</li>								 				
+								<li>
+									<i class="fa fa-user"></i>
+									<a href="nina.html">Dethlefs, N.</a>
+								</li>
+								<li>
+									<a href="https://aiforsocialgood.github.io/neurips2019/accepted/track1/pdfs/45_aisg_neurips2019.pdf"><i class="fa fa-cloud-download"></i></a>PDF</li>	
+							</ul>
+
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+										Recent statistics in suicide prevention show that people are increasingly posting
+their last words online and with the unprecedented availability of textual data
+from social media platforms researchers have the opportunity to analyse such data.
+Furthermore, psychological studies have shown that our state of mind can manifest
+itself in the linguistic features we use to communicate. In this paper, we investigate
+whether it is possible to automatically identify suicide notes from other types of
+social media blogs in a document-level classification task. Also, we present a
+learning model for modelling long sequences, achieving an f1-score of 0.84 over
+the baselines of 0.53 and 0.80 (best competing model). Finally, we also show
+through visualisations which features the learning model identifies.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2019. In AI for Social Good workshop at NeurIPS (2019), Vancouver, Canada.</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+								<a href="nlp.html#publications">
+									<i class="fa fa-tag"></i>Natural Language Processing</a>
+								<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+								<a href="bio_health.html#publications">
+									<i class="fa fa-tag"></i>Biology and Health</a>									
+							</div>
+						</div>
+						<!-- blog tags -->
+
+						<!-- publication entry -->
+
+						<div class="blog-content">
+							<h3>Dilated LSTM with attention for Classification of suicide notes.</h3>
+							<ul class="blog-meta">
+								<li>
+									<i class="fa fa-user"></i>
+									<a href="annika.html">Schoene, A.</a>
+								</li>
+					<li>
+									<i class="fa fa-user"></i>
+									<a href="george.html">Lacey, G.</a>
+								</li>				
+					<li>
+									<i class="fa fa-user"></i>
+									<a href="alex.html">Turner, A.</a>
+								</li>								 				
+								<li>
+									<i class="fa fa-user"></i>
+									<a href="nina.html">Dethlefs, N.</a>
+								</li>
+								<li>
+									<a href="https://www.aclweb.org/anthology/D19-6217.pdf"><i class="fa fa-cloud-download"></i></a>PDF</li>	
+							</ul>
+
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+										In this paper we present a dilated LSTM with
+attention mechanism for document-level classification of suicide notes, last statements and
+depressed notes. We achieve an accuracy of
+87.34% compared to competitive baselines of
+80.35% (Logistic Model Tree) and 82.27%
+(Bi-directional LSTM with Attention). Furthermore, we provide an analysis of both the
+grammatical and thematic content of suicide
+notes, last statements and depressed notes. We
+find that the use of personal pronouns, cognitive processes and references to loved ones are
+most important. Finally, we show through visualisations of attention weights that the Dilated LSTM with attention is able to identify
+the same distinguishing features across documents as the linguistic analysis.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2019. In Proceedings of the Tenth International Workshop on Health Text Mining and Information Analysis (LOUHI 2019). Hong Kong.</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+								<a href="nlp.html#publications">
+									<i class="fa fa-tag"></i>Natural Language Processing</a>
+								<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+								<a href="bio_health.html#publications">
+									<i class="fa fa-tag"></i>Biology and Health</a>										
+							</div>
+						</div>
+						<!-- blog tags -->
+
+						<!-- publication entry -->
+						
+
 
 		<div class="blog-content">
 							<h3>Cross-dialectal speech processing</h3>
@@ -305,7 +576,7 @@ Despite advances in technology, language diversity remains a challenge to the sp
 							<!-- blog tags -->
 							<div class="blog-tags">
 								<h5>Tags :</h5>
-								<a href="evolutionary_algorithms.html#publications">
+								<a href="nlp.html#publications">
 									<i class="fa fa-tag"></i>Natural Language Processing</a>
 							</div>
 						</div>
@@ -398,7 +669,14 @@ modularity within the networks.
 							<ul class="blog-meta">
 								<li>2019. Extended Abstract in Northern Lights Deep Learning Workshop (NLDL), Tromso, Norway.</li>
 							</ul>
-
+						<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+								<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+								<a href="natural.html#publications">
+									<i class="fa fa-tag"></i>Data and Natural World</a>									
+							</div>
 						</div>
 						<!-- blog tags -->
 
