--- a/index.html
+++ b/index.html
@@ -625,7 +625,8 @@ we research interactive systems for dementia.</p>
 							<h3>EMNLP-2019 in Hong Kong</h3>
 							<p>Annika went to Hong Kong to present her paper <a href="https://www.aclweb.org/anthology/D19-6217/">Dilated LSTM with attention for Classification of suicide notes</a>
 							at the <a href="https://louhi2019.fbk.eu/">LOUHI workshop</a> at 
-							<a href="https://www.emnlp-ijcnlp2019.org/">EMNLP-2019</a>. 
+							<a href="https://www.emnlp-ijcnlp2019.org/">EMNLP-2019</a>. See 
+							<a href="https://annikamarie.github.io/blog.html">here</a>.
 						 </p>
 						</div>
 					</div>
