--- a/news-welcome-2018.html
+++ b/news-welcome-2018.html
@@ -61,14 +61,15 @@
 					<!-- /Collapse nav button -->
 				</div>
 
-			<!--  Main navigation  -->
+				<!--  Main navigation  -->
 				<ul class="main-nav nav navbar-nav navbar-right">
-					<li><a href="index.html#home">Home</a></li>
-					<li><a href="index.html#research">Research</a>
+					<li><a href="#home">Home</a></li>
+					<li><a href="#research">Research</a>
+					<li><a href="#projects">Projects</a>					
 					<li><a href="publications.html">Publications</a></li>
-					<li><a href="index.html#team">Team</a></li>
-					<li><a href="index.html#news">News, Projects + Activities</a></li>
-					<li><a href="index.html#contact">Contact</a></li>
+					<li><a href="#team">Team</a></li>
+					<li><a href="index.html#news">News & Activities</a></li>
+					<li><a href="#contact">Contact</a></li>
 				</ul>
 				<!-- /Main navigation -->
 
@@ -149,93 +150,6 @@
 				</main>
 				<!-- /Main -->
 
-
-				<!-- Aside -->
-				<aside id="aside" class="col-md-3">
-
-		
-					<!-- Posts sidebar -->
-					<div class="widget">
-						<h3 class="title">News Stuff</h3>
-						
-						<!-- single post -->
-						<div class="widget-post">
-							<a href="https://nips.cc/">
-								<img src="./img/neurips2019-post.jpeg" alt="">NeurIPS in Vancouver</a>
-							<ul class="blog-meta">
-								<li>Dec 2019</li>
-							</ul>
-						</div>
-						<!-- /single post -->
-
-						<!-- single post -->
-						<div class="widget-post">
-							<a href="https://thespencergroup.co.uk/">
-								<img src="./img/rnnc2-post.jpg" alt="">KTP project with Spencer Group</a>
-							<ul class="blog-meta">
-								<li>Oct 2019</li>
-							</ul>
-						</div>
-						<!-- /single post -->
-
-						<!-- single post -->
-						<div class="widget-post">
-							<a href="https://www.linkedin.com/feed/update/urn%3Ali%3Aactivity%3A6596404880460611584/?midToken=AQHBPjnIWTOZbg&trk=eml-email_notification_single_mentioned_you_in_this_01-notifications-1-hero%7Ecard%7Efeed&trkEmail=eml-email_notification_single_mentioned_you_in_this_01-notifications-1-hero%7Ecard%7Efeed-null-522tij%7Ek2ho9beq%7Er5-null-voyagerOffline">
-								<img src="./img/hackathon-glasgow-post.jpeg" alt=""> Offshore Wind Hackathon, Glasgow</a>
-							<ul class="blog-meta">
-								<li>Oct 2019</li>
-							</ul>
-						</div>
-						<!-- /single post -->
-
-						<!-- single post -->
-						<div class="widget-post">
-							<a href="http://auracdt.hull.ac.uk/">
-								<img src="./img/cdt-post.jpg" alt=""> Aura Centre for Doctoral Training in Offshore Wind
-							and the Environment</a>
-							<ul class="blog-meta">
-								<li>4 Feb 2019</li>
-							</ul>
-						</div>
-						<!-- /single post -->
-
-						<!-- single post -->
-						<div class="widget-post">
-							<a href="https://www.eventbrite.com/e/gpu-programming-for-deep-learning-tickets-53947006950">
-								<img src="./img/rnnc2-post.jpg" alt=""> GPU programming for deep learning - 24/25 Jan.
-							</a>
-							<ul class="blog-meta">
-								<li>20 Dec 2018</li>
-							</ul>
-						</div>
-						<!-- /single post -->
-
-					<!-- single post -->
-						<div class="widget-post">
-							<a href="news-xmas-2018.html">
-								<img src="./img/xmas-2018-post.jpg" alt=""> Christmas Poster Workshop 2018
-							</a>
-							<ul class="blog-meta">
-								<li>7 Dec 2018</li>
-							</ul>
-						</div>
-						<!-- /single post -->	
-
-						<!-- single post -->
-						<div class="widget-post">
-							<a href="news-catapult-joyjit-2018.html">
-								<img src="./img/catapult-post.jpg" alt=""> OREC Catapult in Glasgow
-							</a>
-							<ul class="blog-meta">
-								<li>22 Nov 2018</li>
-							</ul>
-						</div>
-						<!-- /single post -->
-						
-
-						<a href="index.html#news"> --- ALL NEWS --- </a>																			
-
-					</div>
 					<!-- /Posts sidebar -->
 
 				</aside>
