--- a/index.html
+++ b/index.html
@@ -747,6 +747,14 @@ I Licentiated in Nuclear Medicine in 2006 from Escola Superior de Tecnologia da 
 <br> Deep learning, machine learning, sentiment analysis, natural language processing
 <br><br>
 
+<h6>Dr Darryl Davis</h6>, Senior Lecturer, now freelancing / enjoying retirement
+<a href="https://scholar.google.co.uk/citations?user=C2NvtdIAAAAJ&hl=en"><i class="fa fa-google"></i></a>
+<a href="https://www.linkedin.com/in/darryl-davis-1001b91b/?originalSubdomain=uk"><i class="fa fa-linkedin-square" ></i></a><br>
+Artificial intelligence, machine learning, data analytics, robotics
+<br><br>
+
+
+
 <h6>Dr Ric Colasanti</h6>, Postdoctoral Researcher, now at Bournemouth University<br>
 Artificial intelligence, machine learning
 <br><br>
