--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 We are part of the larger research group on <a href="https://www.hull.ac.uk/work-with-us/research/groups/dependable-intelligent-systems">Dependable Intelligent Systems (DEIS)</a>.
 
 We do cutting-edge research in (deep) machine learning, artificial intelligence and natural language 
-processin and work with local and international 
+processing and work with local and international 
 businesses on knowledge transfer and impact acceration projects. Many of our current projects have a sustainability angle. 
 We work closely with others parts of the university such as the 
 <a href="https://hpc.wordpress.hull.ac.uk/">Viper HPC team</a> and the 
