--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@ We work closely with others parts of the university such as the
 						<img class="img-responsive" src="./img/satellite.jpg" alt="" width="300" align="left"
 						style="padding: 20px;">
 						<h3 align="right">Sustainability and the Environment</h3>
-						<p align="right">We are in applying AI and machine learning techniques to help solve problems in 
+						<p align="right">We are applying AI and machine learning techniques to help solve problems in 
 						sustainability and environmental research. We are part of the EPSRC Aura CDT on Offshore Wind and 
-						the Environment, so we have a strong interest in the digitalisation of offshore wind. As part of this, 
+						the Environment, and we have a strong interest in the digitalisation of offshore wind. As part of this, 
 						we use AI to improve operations and maintenance
 						of wind turbines to improve their reliability and usability as an alternative to fossil fuel-based 
 						energy sources. We achieve this through detailed and explainable fault forecasting
