--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ We are part of the larger research group on <a href="https://www.hull.ac.uk/work
 
 We do cutting-edge research in (deep) machine learning, artificial intelligence and natural language 
 processing and work with local and international 
-businesses on knowledge transfer and impact acceration projects. Many of our current projects have a sustainability angle. 
+businesses on knowledge transfer and impact acceleration projects. Many of our current projects have a sustainability angle. 
 We work closely with others parts of the university such as the 
 <a href="https://hpc.wordpress.hull.ac.uk/">Viper HPC team</a> and the 
 <a href="https://www.hull.ac.uk/work-with-us/research/institutes/energy-and-environment-institute">Energy and Environment Institute</a>.
