--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@ multi-robot systems.</p>
 
 <span style="color:#6195FF">Full profile</span>
 </summary>
-<p><img class="img-responsive" src="./img/nina.png" alt="" width="150" align="right">	
+<p><img class="img-responsive" src="./img/nina.png" alt="" width="180" align="right">	
 I am a Senior Lecturer in <a href="https://www.hull.ac.uk/faculties/subjects/computer-science.aspx">Computer Science</a> at the <a href="https://www.hull.ac.uk/index.aspx">University of Hull</a>, Yorkshire, UK, where I lead the Big Data Analytics Research group. 
 I am also currently Director of Research for Computer Science and Technology and Aura CDT Theme lead for "Big data, sensors and digitalisation for the offshore environment".							
 Before coming to Hull, I was a Research Fellow in the <a href="https://sites.google.com/site/hwinteractionlab/">The Interaction Lab</a> at <a href="https://www.hw.ac.uk/">Heriot-Watt University</a>, Edinburgh. I have a PhD in Computational Linguistics from the <a href="https://www.uni-bremen.de/">University of Bremen</a>, Germany.</p>
@@ -445,7 +445,7 @@ natural events such as floods. When I have time I do some research in digital co
 
 <span style="color:#6195FF">Full profile</span>
 </summary>
-<p><img class="img-responsive" src="./img/alex.jpg" alt="" width="150" align="right">	
+<p><img class="img-responsive" src="./img/alex.jpg" alt="" width="180" align="right">	
 Alex is an Assistant Professor in the <a href="https://www.nottingham.ac.uk/computerscience/">School of Computer Science</a>. at the <a href="https://www.nottingham.ac.uk/">University of Nottingham</a>. Prior to this, he was a lecturer in Computer Science at the University of Hull and a Post Doctoral Researcher in the Department of Electronic Engineering at the University of York, where he obtained his PhD. His MSc was awarded in the Department of Computer Science at the University of York. 
 Alex has previously taught modules in procedural programing, object-oriented programming and artificial intelligence.</p>
 <p>Alex's main research interests are focused on the development of new technologies to improve the diagnosis and treatments of movement disorders, 
@@ -475,7 +475,7 @@ learning in the biological sciences both to improve disease diagnosis and on und
 
 <span style="color:#6195FF">Full profile</span>
 </summary>
-<p><img class="img-responsive" src="./img/bikash.jpeg" alt="" width="100" align="right">	
+<p><img class="img-responsive" src="./img/bikash.jpeg" alt="" width="150" align="right">	
 I am a researcher working in Natural Language Processing and Big Data Systems. Over the last five years, I have worked as 
 a full time researcher on several topics related to Natural Language Understanding and Generation, Deep Learning, Big Data 
 Analysis and Text Mining of scientific documents. </p>
@@ -484,6 +484,33 @@ Analysis and Text Mining of scientific documents. </p>
 and document classification to optimise Spencer's workflows and productivity.
 Bikash holds a PhD from the Université de Lorraine in France (2015). 
 </p>
+</details>
+</abstract>
+</ul>	
+<br>
+
+<h6>Dr Robert Houseago</h6>, Research Associate, 
+&nbsp;&nbsp;
+<a href="mailto:R.C.Houseago-2016@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
+<a href="https://www.researchgate.net/profile/Robert-Houseago"><i class="fa fa-home" ></i></a>
+<br>Environmental modelling, coastal geomorphology, data analytics
+<br>
+<ul class="blog-meta">
+<abstract style="display:inline" ;>
+<details close style="display:inline;">
+<summary>
+
+<span style="color:#6195FF">Full profile</span>
+</summary>
+<p><img class="img-responsive" src="./img/bobby.jpg" alt="" width="180" align="right">	
+Bobby is a coastal geomorphologist interested in the physical processes influencing coastal dynamics and delta morphodynamics. 
+Research projects incorporate: coastal vegetation, sediment fluxes, and hydrodynamics. His current primary research project 
+investigates the role of seagrass on hydrodynamics and wave attenuation via experimental flume research, 
+validated by field measurements as part of international collaboration within the Hydralab+ protect. A range of 
+interdisciplinary data collection techniques are applied to the research in order to quantify complex interactions 
+and non-linear processes associated with vegetation, wave dynamics and sedimentation. </p>
+<p>Bobby is a member of the Energy and Environment Institute and a postdoctoral researcher on our EPSRC Supergen ORE grant, working 
+on hybrid methods for fatigue forecasting in wind turbine monopiles, bridging physical and machine learning methods. </p>
 </details>
 </abstract>
 </ul>	
@@ -529,7 +556,7 @@ different sources including heights maps of the geographical area, dynamic rainf
 
 <span style="color:#6195FF">Full profile</span>
 </summary>
-<p><img class="img-responsive" src="./img/joyjit.jpg" alt="" width="150" align="right">	
+<p><img class="img-responsive" src="./img/joyjit.jpg" alt="" width="180" align="right">	
 Joyjit is a Final Year PhD. Computer Science Researcher at the University of Hull, Yorkshire, UK. He is presently 
 researching in the area of tackling climate change with AI, by helping make wind energy sources more reliable, through 
 explainable and intelligent decision support in their operations & maintenance. During his PhD., he has closely collaborated 
@@ -604,7 +631,7 @@ ecosystems and wildlife.
 <summary>
 <span style="color:#6195FF">Full profile</span>
 </summary>
-<p><img class="img-responsive" src="./img/albert1.jpg" alt="" width="150" align="right">	
+<p><img class="img-responsive" src="./img/albert1.jpg" alt="" width="180" align="right">	
 Albert is currently at PhD student at the University of Hull and a Deep Learning Scientist at Vicon. His
  area of research focuses on exploring how Machine Learning algorithms, specifically novel Deep Neural Networks can be utilised 
  within the domain of Autonomous Transportation to improve current approaches towards short-term motion prediction.</p>
@@ -657,7 +684,7 @@ algorithms, particularly from the area of computer vision, and their efficient a
 
 <span style="color:#6195FF">Full profile</span>
 </summary>
-<p><img class="img-responsive" src="./img/george.jpg" alt="" width="120" align="right">	
+<p><img class="img-responsive" src="./img/george.jpg" alt="" width="150" align="right">	
 George is currently a PhD student in Computer Science at the University of Hull. His research focuses on transparency 
 in machine learning through the investigation of biologicall-inspired networks, such as
 epigenetic networks which are applied to solve tasks in complex dynamical systems.</p>
@@ -688,7 +715,7 @@ deactivated for increased efficiency during training.
 
 <span style="color:#6195FF">Full profile</span>
 </summary>
-<p><img class="img-responsive" src="./img/luana.jpg" alt="" width="150" align="right">	
+<p><img class="img-responsive" src="./img/luana.jpg" alt="" width="180" align="right">	
 The aim of my PhD project is to investigate how different combined stressors act in the environment, with particular attention to biological responses in mussels.
 </p>
 <p>
@@ -715,7 +742,7 @@ The first part of my PhD involves the exposure of the blue mussel Mytilus edulis
 
 <span style="color:#6195FF">Full profile</span>
 </summary>
-<p><img class="img-responsive" src="./img/eva.jpg" alt="" width="150" align="right">	
+<p><img class="img-responsive" src="./img/eva.jpg" alt="" width="180" align="right">	
 I Licentiated in Nuclear Medicine in 2006 from Escola Superior de Tecnologia da Saúde de Lisboa – Instituto Politécnico de Lisboa (ESTeSL-IPL). Following, I finnished my MSc in Biophysics and Medical Physics in 2009, from Instituto de Biofísica e Engenharia Biomédica, da Faculdade de Ciências da Universidade de Lisboa (IBEB-FCUL. Concluded one Biomedical Engineering Specialization in 2014 from Faculdade de Ciências e Tecnologias da Universidade de Coimbra (FCTUC). I am presently student PhD Student in University of Hull.</p>
 <p>From September of 2008 to September of 2018, I was full-time Assistant Lecturer in ESTeSL-IPL. Lecturing in the degrees of Nuclear Medicine and Medical Imaging and RadiotherapyDuring this time, I collected some experience of lecturing in different Institutions abroad under Erasmus Program in 2010 (Karolinska Institutet – Sweden); 2012 and 2013 in NuPHiCos (Medical University of Plovdiv – Bulgaria); 2015 (Institute Paul Lambin – Brussels). And From 2012 to 2018 I coordinate the entrepreneurship Program of ESTeSL-IPL.</p>
 <p>I collaborated with some research teams and projects and have being member of Member of the Research Groups GI-MOSM and  GIRES. I have collaborated in some funded research projects by Instituto Politécnico de Lisboa, with the fellowship (IDI&CA) do IPL – 2016. </p>
