--- a/index.html
+++ b/index.html
@@ -280,10 +280,10 @@ We work closely with others parts of the university such as the
 				<div class="col-md-4">
 					<div class="about">
 						<i class="fa fa-flask" style="color:MediumBlue;"></i>
-						<h3>KTP with reckitt</h3>
+						<h3>KTP with Reckitt</h3>
 						<p>We develop novel algorithms to improve stability testing of new product formulations and accelerate 
 						their launch from initial conception and design 
-						through to testing and manufacturing. This will accelerate product improvement and enhance reckitt's
+						through to testing and manufacturing. This will accelerate product improvement and enhance Reckitt's
 					capacity to react to customer feedback and product reviews.</p>
 						<p><em>Innovate UK, 2021-23 (PI)</em></p>
 					</div>
@@ -904,8 +904,8 @@ See details <a href="https://supergen-ore.net/projects/machine-learning-for-fati
 								<li><i class="fa fa-user"></i><a href="https://scholar.google.com/citations?hl=en&user=dv1RKmIAAAAJ&view_op=list_works">Nina</a></li>							
 								<li><i class="fa fa-clock-o"></i>Jan 2021</li>
 							</ul>
-							<h3>KTP with reckitt</h3>
-							<p>We are really excited to be working with <a href="https://www.reckitt.com/">reckitt</a> on a 2-year KTP project 
+							<h3>KTP with Reckitt</h3>
+							<p>We are really excited to be working with <a href="https://www.reckitt.com/">Reckitt</a> on a 2-year KTP project 
 							to develop novel AI techniques to improve stability testing and new product development, and
 							accelerate product development from design over testing to manufacturing.
 							What an amazing opportunity!
