--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<li><a href="publications.html">Publications</a></li>
 					<li><a href="#team">Team</a></li>
 					<li><a href="index.html#news">News & Activities</a></li>
-					<li><a href="#contact">Contact us</a></li>
+					<li><a href="#contact">Contact</a></li>
 				</ul>
 				<!-- /Main navigation -->
 
