--- a/index.html
+++ b/index.html
@@ -880,23 +880,26 @@ Deep learning, computer vision
 				<!-- blog -->
 
 				<!-- blog -->
-	<!--<div class="col-md-4">
+	<div class="col-md-4">
 					<div class="blog">
 						<div class="blog-img">
-							<img class="img-responsive"  src="./img/greentalents.jpg" alt="">
+							<img class="img-responsive"  src="./img/green_talents.png" alt="">
 						</div>
 						<div class="blog-content">
 							<ul class="blog-meta">
 								<li><i class="fa fa-user"></i><a href="https://scholar.google.co.uk/citations?user=kjWYrm4AAAAJ&hl=en">Joyjit</a></li>
 								<li><i class="fa fa-clock-o"></i>Oct 2021</li>
 							</ul>
-							<h3>Green Talents Awards 2021</h3>
-							<p>We're massively proud of Joyjit for being awarded a XXX
-							from a very selective process. The German Ministry of CC awards these presitigous 
-							titles to young researchers that have made an outstanding contribution to XXXX.</p>
+							<h3>Green Talents Award 2021 <i class="fa fa-globe" style="color:green;"></i></h3>
+							<p>We're massively proud of Joyjit who got selected for a 
+							<a href="https://www.greentalents.de/announcement_07-04-2021_competition.php">Green Talents Award</a> from amongst
+							<a href="https://www.greentalents.de/awardees-2021.php">25 researchers</a> from around the globe. The 
+							<a href="https://www.bmbf.de/bmbf/de/home/home_node.html">
+							German Ministry of Education and Research</a> awards these prestigious
+							titles + a fully funded research stay in Germany to young people that have made an outstanding contribution to research in sustainability.</p>
 						</div>
 					</div>
-				</div>-->	
+				</div> 
 				<!-- /blog -->	
 		
 				<!-- blog -->
@@ -913,7 +916,7 @@ Deep learning, computer vision
 							<h3>Hedgehog Rescue</h3>
 							<p>The University are part of an amazing initiative to create a hedgehog-friendly campus, 
 							see 							
-							<a href=https://www.hull.ac.uk/work-with-us/more/media-centre/news/2021/university-of-hull-commits-to-creating-a-hedgehog-friendly-campus">here</a>.
+							<a href="https://www.hull.ac.uk/work-with-us/more/media-centre/news/2021/university-of-hull-commits-to-creating-a-hedgehog-friendly-campus">here</a>.
 							This involves raising awareness of hedgehogs and their habitats, creating safe spaces, including
 							bug hotels and hedgehog shelters, and keeping our campus clean and tidy. We're very excited about this!
 							 </p>
@@ -935,7 +938,7 @@ Deep learning, computer vision
 							</ul>
 							<h3>Congrats Joyjit! <i class="fa fa-trophy" style="color:Gold;"></i></h3>
 							<p>Congratulations to <a href="https://scholar.google.co.uk/citations?user=kjWYrm4AAAAJ&hl=en">Dr Joyjit Chatterjee</a>, 
-							who has successfully passed his viva, completing his PhD on Explainable AI for O&M of Wind Turbineees, see 
+							who has successfully passed his viva, completing his PhD on Explainable AI for O&M of Wind Turbines, see 
 							<a href="https://www.linkedin.com/feed/update/urn%3Ali%3Aactivity%3A6841703775913218048/?midToken=AQHBPjnIWTOZbg&midSig=30GhJBT3UVRpU1&trk=eml-email_notification_single_mentioned_you_in_this_01-notifications-1-hero%7Ecard%7Efeed&trkEmail=eml-email_notification_single_mentioned_you_in_this_01-notifications-1-hero%7Ecard%7Efeed-null-522tij%7Ektcw0rnx%7Ew5-null-voyagerOffline">here</a>.
 							Well done Joyjit - and we're excited that you're staying with us in a postdoctoral role.
 						 </p>
