--- a/index.html
+++ b/index.html
@@ -603,29 +603,6 @@ ecosystems and wildlife.
 </ul>	
 <br>
 
-<h6>Matthew Hartley</h6>, PhD student 
-&nbsp;&nbsp;
-<a href="mailto:Matthew.Hartley-2018@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
-<a href="https://www.linkedin.com/in/matthew-hartley-884a5441/?originalSubdomain=uk"><i class="fa fa-linkedin-square" ></i></a>
-<br> Deep learning, radar scan analysis
-<br>
-<ul class="blog-meta">
-<abstract style="display:inline" ;>
-<details close style="display:inline;">
-<summary>
-
-<span style="color:#6195FF">Full profile</span>
-</summary>
-Matt is currently a PhD researcher in Computer Science working on distinguishing birds from other non-biological targets
-from high-frequency radar data, as well as classifying different types of bird species. He is researching novel deep learning
-algorithms, particularly from the area of computer vision, and their efficient application to noise reduction and classification.
-
-</p>
-</details>
-</abstract>
-</ul>	
-<br>
-
 <h6>Luana Mincarelli</h6>, PhD student 
 &nbsp;&nbsp;
 <a href="mailto:L.F.Mincarelli-2018@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
@@ -667,26 +644,6 @@ The first part of my PhD involves the exposure of the blue mussel Mytilus edulis
 <span style="color:#6195FF">Full profile</span>
 </summary>
 Erv is currently researching efficient ways to model sequencies and time series.
-
-</p>
-</details>
-</abstract>
-</ul>	
-<br>
-
-<h6>Samuel Rose</h6>, PhD student 
-&nbsp;&nbsp;
-<a href="mailto:S.P.ROSE-2017@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
-<br> Deep learning, AI
-<br>
-<ul class="blog-meta">
-<abstract style="display:inline" ;>
-<details close style="display:inline;">
-<summary>
-
-<span style="color:#6195FF">Full profile</span>
-</summary>
-Sam is researching ways to use deep learning effectively to facilitate the automatic diagnosis of dyslexia.
 
 </p>
 </details>
@@ -829,6 +786,28 @@ Deep learning, computer vision
 
 				<div class="row">
 				<!-- blog -->
+
+				<!-- blog -->
+	<div class="col-md-4">
+					<div class="blog">
+						<div class="blog-img">
+							<img class="img-responsive"  src="./img/hackathon_pic.jpeg" alt="">
+						</div>
+						<div class="blog-content">
+							<ul class="blog-meta">
+								<li><i class="fa fa-user"></i><a href="https://scholar.google.com/citations?hl=en&user=dv1RKmIAAAAJ&view_op=list_works">Nina</a>, <a href="index.html#team">Lydia</a></li>
+								<li><i class="fa fa-clock-o"></i>March 2022</li>
+							</ul>
+							<h3>Hackathon in AI for Sustainability</h3>
+							<p>We're running a <a href="https://nerc.ukri.org/">NERC discipline hopping</a> Hackathon in "AI for Sustainability" 
+							with colleagues from <a href="https://www.hull.ac.uk/faculties/fse/engineering-and-computer-science/more/research">Computer Science</a> and
+							the <a href="https://www.hull.ac.uk/work-with-us/research/institutes/energy-and-environment-institute">Energy and Environment Institute</a>. See details 
+							<a href="hackathon-ai+sus.html">here</a> or <a href="https://forms.gle/dTCVxk1CBEmgihpk7">register</a> to join us 28 March to 1 April 2022.
+							 </p>
+						</div>
+					</div>
+				</div>
+				<!-- /blog -->	
 
 
 				<!-- /blog -->	
