--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@ Deep learning, computer vision
 						</div>
 						<div class="blog-content">
 							<ul class="blog-meta">
-								<li><i class="fa fa-user"></i><a href="https://scholar.google.com/citations?hl=en&user=dv1RKmIAAAAJ&view_op=list_works">Nina</a>, <a href="index.html#team">Lydia</a></li>
+								<li><i class="fa fa-user"></i><a href="index.html#team">BDA</a>, <a href="https://www.hull.ac.uk/work-with-us/research/institutes/energy-and-environment-institute">EEI</a></li>
 								<li><i class="fa fa-clock-o"></i>March 2022</li>
 							</ul>
 							<h3>Hackathon in AI for Sustainability</h3>
