--- a/hackathon-ai+sus.html
+++ b/hackathon-ai+sus.html
@@ -72,7 +72,7 @@ tr:nth-child(even) {
 					<!-- Logo -->
 					<div class="navbar-brand">
 						<a href="index.html">
-							<img class="logo" src="img/logo.png" alt="logo">
+
 						</a>
 					</div>
 					<!-- /Logo -->
@@ -83,6 +83,16 @@ tr:nth-child(even) {
 					</div>
 					<!-- /Collapse nav button -->
 				</div>				</div>
+				
+				<!--  Main navigation  -->
+				<ul class="main-nav nav navbar-nav navbar-right">
+					<li><a href="#intro">Home</a></li>
+					<li><a href="#projects">Projects</a>					
+					<li><a href="#programme">Programme</a>										
+					<li><a href="#organisation">Organisation</a></li>
+					<li></li>					
+				</ul>
+				<!-- /Main navigation -->				
 
 			</div>
 		</nav>
@@ -117,7 +127,7 @@ Register using the online form <a href="https://forms.gle/E5FsxaiCkMRhvd6j8">her
 				
 
 	<!-- About -->
-	<div id="research" class="section md-padding bg-grey">
+	<div id="projects" class="section md-padding bg-grey">
 
 		<!-- Container -->
 		<div class="container">
